--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     "helmet": "^7.1.0",
     "mathjs": "^12.2.1",
     "uuid": "^9.0.1",
-    "vectorious": "^6.1.14"
-  },
-  "devDependencies": {
+    "vectorious": "^6.1.14",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.8",
     "@types/node": "^20.19.9",
     "@types/uuid": "^9.0.7",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.8",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=18.0.0"
