--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@ PORT=10000
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # CORS Settings for production
-ALLOWED_ORIGINS=https://your-vercel-app.vercel.app,http://localhost:3000
+ALLOWED_ORIGINS=https://rag-pi-seven.vercel.app,http://localhost:3000
 
 # Optional: Enable detailed logging in production
 LOG_LEVEL=info
